--- a/public/s/audience.html
+++ b/public/s/audience.html
@@ -10,13 +10,24 @@
 			<th>操作</th>
 		</tr>
 		</thead>
-		<tbody></tbody>
+		<tbody>
+			<script type="text/html" id="tr-tmpl">
+				<tr>
+					<td><%- name %></td>
+					<td><%= onlinetime %></td>
+					<td>
+						<a data-aid="<%= id %>" class="ex-link kickaudi">踢除</a>
+					</td>
+				</tr>
+			</script>
+		</tbody>
 	</table>
 </div>
 
 <script>
 	var $tableAudience = $('#table-audience'),
-		$tbody = $tableAudience.children('tbody');
+		$tbody = $tableAudience.find('tbody'),
+		trTmpl = $tbody.find('#tr-tmpl').html();
 
 	updateAudienceList();
 
@@ -31,7 +42,6 @@
 	});
 
 	function updateAudienceList() {
-		var $tbody = $tableAudience.find('tbody');
 		$.get('/do/s/audiencelist', function(resObj){
 			var ok = resObj['ok'], msg = resObj['msg'];
 			msg && notify(msg, ok);
@@ -45,15 +55,11 @@
 				].join(''));
 			}
 			$tbody.html(_.reduce(audienceList, function(memo, audience){
-				return memo + [
-					'<tr>',
-						'<td>' + audience.name + '</td>',
-						'<td>' + strTime(Date.now() - audience.jointime, true) + '</td>',
-						'<td>',
-							'<a data-aid="'+ audience['id'] +'" class="ex-link kickaudi">踢除</a>',
-						'</td>',
-					'</tr>'
-				].join('');
+				return memo + _.template(trTmpl, {
+					id: audience.id,
+					name: audience.name,
+					onlinetime: strTime(Date.now() - audience.jointime, true)
+				});
 			}, ''));
 		});
 	}
