bug fixed of xss

--- a/public/a/audience.html
+++ b/public/a/audience.html
@@ -13,7 +13,7 @@
 			<script type="text/html" id="tr-tmpl">
 				<tr>
 					<td><%- name %></td>
-					<td><%= onlinetime %></td>
+					<td><%- onlinetime %></td>
 				</tr>
 			</script>
 		</tbody>
