--- a/public/s/audience.html
+++ b/public/s/audience.html
@@ -14,9 +14,9 @@
 			<script type="text/html" id="tr-tmpl">
 				<tr>
 					<td><%- name %></td>
-					<td><%= onlinetime %></td>
+					<td><%- onlinetime %></td>
 					<td>
-						<a data-aid="<%= id %>" class="ex-link kickaudi">踢除</a>
+						<a data-aid="<%- id %>" class="ex-link kickaudi">踢除</a>
 					</td>
 				</tr>
 			</script>
