--- a/public/s/qna.html
+++ b/public/s/qna.html
@@ -20,8 +20,8 @@
 		<tbody>
             <script type="text/html" id= "tr-tmpl">
                 <tr>
-                <td><%= audienceName %></td>
-                <td><%- text %></td>
+                    <td><%- audienceName %></td>
+                    <td><%- text %></td>
                 </tr>
             </script>
 		</tbody>
